fixed broken css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body {
   background: transparent radial-gradient(closest-side at 50% 50%, #b1e2ff 0%, #65c5fd 140%, #7aceff 140%) 0% 0% no-repeat padding-box;
   margin: 0;
   height: 100vh;
+  background: transparent radial-gradient(closest-side at 50% 50%, #b1e2ff 0%, #65c5fd 140%, #7aceff 140%) 0% 0% no-repeat padding-box;
 }
 
 .modal-content {
